--- a/Vidly/Views/Movies/AllMovies.cshtml
+++ b/Vidly/Views/Movies/AllMovies.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly.ViewModels.MovieViewModel
+﻿@model IEnumerable<Vidly.Models.Movie>
 @{
     ViewBag.Title = "AllMovies";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,7 +6,7 @@
 
 <h2>Movies</h2>
 
-@if (Model.Movies.Count == 0)
+@if (!Model.Any())
 {
     <text>There arn't any movies</text>
 }
@@ -19,7 +19,7 @@ else
         </tr>
     </thead>
     <tbody>
-        @foreach (var movie in Model.Movies)
+        @foreach (var movie in Model)
         {
             <tr>
                 <td>
