--- a/Vidly/Views/Shared/_Layout.cshtml
+++ b/Vidly/Views/Shared/_Layout.cshtml
@@ -13,6 +13,11 @@
         @RenderBody()
         <hr />
         <footer>
+            <div class="navbar-right float-right">
+                @Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
+            </div>
             <p>&copy; @DateTime.Now.Year - Vidly</p>
         </footer>
     </div>
